fix visualizer width when scrollbar appears

--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,6 @@
 }
 
 .AmpContainer {
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
 }
